LinkedIn-Profil hinzugefügt

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <p><strong>Adresse:</strong> St. Niklausstrasse 8a, 3425 Koppigen, Schweiz</p>
     <p><strong>Telefonnummer:</strong> +41 79 765 46 44</p>
     <p>Email: <a href="mailto:matthias.kuhn1979@gmail.com">matthias.kuhn1979@gmail.com</a></p>
+    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/matthiaskuhn1979/" target="_blank">Besuche mein LinkedIn Profil</a></p>
   </section>
 
   <footer>
