--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <h1>Willkommen auf datafreak79.ch</h1>
     <nav>
       <ul>
-        <li><a href="#about">Über mich</a></li> 
-        <p><strong>Lebenslauf:</strong> <a href="Lebenslauf_2025.pdf" target="_blank">Hier als PDF herunterladen</a></p>
+        <p><strong>CV:</strong> <a href="Lebenslauf_2025.pdf" target="_blank">Hier als PDF herunterladen</a></p>
         <li><a href="#projects">Projekte</a></li>
         <li><a href="#contact">Kontakt</a></li>
       </ul>
