Füge grundlegendes CSS-Stylesheet hinzu und verbessere die Struktur von index.html

--- a/index.html
+++ b/index.html
@@ -4,44 +4,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>datafreak79.ch</title>
-  <link rel="stylesheet" href="styles.css"> <!-- Dein Stylesheet für Design -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
   <header>
-    <h1>Willkommen auf datafreak79.ch</h1>
-    <nav>
-      <ul>
-        <p><strong>CV:</strong> <a href="Lebenslauf_2025.pdf" target="_blank">Hier als PDF herunterladen</a></p>
-        <li><a href="#projects">Projekte</a></li>
-        <li><a href="#contact">Kontakt</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1>Willkommen auf datafreak79.ch</h1>
+      <nav>
+        <ul>
+          <li><a href="Lebenslauf_2025.pdf" target="_blank" class="btn">📄 CV als PDF</a></li>
+          <li><a href="#projects">Projekte</a></li>
+          <li><a href="#contact">Kontakt</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <section id="about">
-    <h2>Über mich</h2>
-    <p>Ich bin ein Projektleiter im Bereich Energieversorgung (Strom) mit technischem Hintergrund. Außerdem arbeite ich aktuell an einem Data Science Lehrgang, wo ich besonders im Bereich R Programmierung und Statistik dazulerne.</p>
-    <p>Mit meiner Shiny-App möchte ich andere beim Sprachlernen unterstützen. Die App basiert auf zufallsgenerierten Abfragen mit Niveaustufen und bietet umfangreiche Statistiken.</p>
-  </section>
+  <main>
+    <section id="about">
+      <div class="container">
+        <h2>Über mich</h2>
+        <p>Ich bin ein Projektleiter im Bereich Energieversorgung (Strom) mit technischem Hintergrund. Außerdem arbeite ich aktuell an einem Data Science Lehrgang, wo ich besonders im Bereich R Programmierung und Statistik dazulerne.</p>
+        <p>Mit meiner Shiny-App möchte ich andere beim Sprachlernen unterstützen. Die App basiert auf zufallsgenerierten Abfragen mit Niveaustufen und bietet umfangreiche Statistiken.</p>
+      </div>
+    </section>
 
-  <section id="projects">
-    <h2>Projekte</h2>
-    <p>Hier kommen meine Projekte hin, insbesondere meine Shiny-Apps, die ich im Bereich Sprachlernen und Data Science entwickle. Meine App wird Mehrsprachigkeit unterstützen und bietet eine umfangreiche Statistikansicht.</p>
-  </section>
+    <section id="projects">
+      <div class="container">
+        <h2>Projekte</h2>
+        <p>Hier kommen meine Projekte hin, insbesondere meine Shiny-Apps, die ich im Bereich Sprachlernen und Data Science entwickle. Meine App wird Mehrsprachigkeit unterstützen und bietet eine umfangreiche Statistikansicht.</p>
+      </div>
+    </section>
 
-  <section id="contact">
-    <h2>Kontakt</h2>
-    <p>Falls du Interesse an meinen Projekten hast oder eine Frage hast, kannst du mich gerne hier erreichen.</p>
-    <p><strong>Adresse:</strong> St. Niklausstrasse 8a, 3425 Koppigen, Schweiz</p>
-    <p><strong>Telefonnummer:</strong> +41 79 765 46 44</p>
-    <p>Email: <a href="mailto:matthias.kuhn1979@gmail.com">matthias.kuhn1979@gmail.com</a></p>
-    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/matthiaskuhn1979/" target="_blank">Besuche mein LinkedIn Profil</a></p>
-  </section>
+    <section id="contact">
+      <div class="container">
+        <h2>Kontakt</h2>
+        <p><strong>Adresse:</strong> St. Niklausstrasse 8a, 3425 Koppigen, Schweiz</p>
+        <p><strong>Telefonnummer:</strong> +41 79 765 46 44</p>
+        <p>Email: <a href="mailto:matthias.kuhn1979@gmail.com">matthias.kuhn1979@gmail.com</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/matthiaskuhn1979/" target="_blank">Besuche mein LinkedIn Profil</a></p>
+      </div>
+    </section>
+  </main>
 
   <footer>
-    <p>&copy; 2025 datafreak79.ch</p>
+    <div class="container">
+      <p>&copy; 2025 datafreak79.ch | Erstellt mit ❤️ von Matthias Kuhn</p>
+    </div>
   </footer>
 
-  <script src="script.js"></script> <!-- Falls du JS brauchst -->
+  <script src="script.js"></script>
 </body>
 </html>
+
