--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           -->
           <li>
             <a href="Lebenslauf_2025.pdf" target="_blank" class="btn">
-              📄 CV als PDF
+              📄 Lebenslauf als PDF
             </a>
           </li>
           <li>
@@ -86,9 +86,10 @@
           R Programmierung und Statistik dazulerne.
         </p>
         <p>
-          Mit meiner Shiny-App moechte ich andere beim Sprachlernen
-          unterstuetzen. Die App basiert auf zufallsgenerierten Abfragen
-          mit Niveaustufen und bietet umfangreiche Statistiken.
+          In meiner Freizeit beschaeftige ich mich mit Sprachen und
+          lerne aktuell Englisch und Französisch Ich bin auch ein begeisterter
+          Shiny-App-Entwickler und arbeite an einer App, die das
+          Sprachenlernen unterstuetzt.
         </p>
       </div>
     </section>
@@ -101,10 +102,8 @@
       <div class="container">
         <h2>Projekte</h2>
         <p>
-          Hier kommen meine Projekte hin, insbesondere meine Shiny-Apps,
-          die ich im Bereich Sprachlernen und Data Science entwickle.
-          Meine App wird Mehrsprachigkeit unterstuetzen und bietet eine
-          umfangreiche Statistikansicht.
+          Quiz Sprachen lernen: Eine Shiny-App, die das Lernen von
+          Vokabeln und Grammatik in verschiedenen Sprachen unterstuetzt.
         </p>
       </div>
     </section>
