--- a/index.html
+++ b/index.html
@@ -38,16 +38,26 @@
       <div class="container">
         <h2>Über mich</h2>
         <p>
-          Ich bin ein Projektleiter im Bereich Energieversorgung (Strom)
-          mit technischem Hintergrund. Ausserdem arbeite ich aktuell an
-          einem Data Science Lehrgang, wo ich besonders im Bereich
-          R Programmierung und Statistik dazulerne.
+          Nachdem ich mit über 45 Jahren beruflich als Projektleiter in der Infrastruktur für Verteilnetze tätig bin, habe ich mich entschieden, mich in der Welt der Daten zu vertiefen.
+          In meiner aktuellen Tätigkeit kann ich meine Leidenschaft für Daten und Programmierung nur bedingt ausleben wie ich in den letzten Monaten festgestellt habe.
+
+          Die Skills die ich mir bei der Weiterbildung Kurs "Data Scientist NDK HF" aneignen konnte, möchte ich nun in der Praxis anwenden.
+
+          Seit ich beim Hausbbau 2019 meine erste Excel-Datei Makrodatei für die Erstellung des Elektroinstallationsmaterials erstellt habe, bin ich fasziniert von der Welt der Daten und der Programmierung. 
+          Ich habe mich neben meiner Tätigkit in als Projektleiter im Verteilnetz für die Elektroversorgung seitdem nebenbher auch immer mit Daten beschöftigt.
+
+          Nachdem ich lange Zeit nur mit VBA arbeitete, begann ich 2022 damit mich Power BI und Power Query zu beaschäftigen.
+          Ich habe dort unter anderem eine APP für die Abfrage meiner persönlichen Bankdaten erstellt (via csv Stammdaten).
+
+          Im Herbst 2023 entschied ich mich dafür den Lehrgan "Data Scientist NDK HF" zu besuchen.
+          Ich lernte dort die faszinierende Welt von SQL und R kennen.
+
         </p>
         <p>
-          In meiner Freizeit beschaeftige ich mich mit Sprachen und
+          In meiner Freizeit beschaeftige ich mich neben Daten mit Sprachen und
           lerne aktuell Englisch und Französisch. Ich bin auch ein begeisterter
           Shiny-App-Entwickler und arbeite an einer App, die das
-          Sprachenlernen unterstuetzt.
+          Sprachenlernen unterstuetzt. Ein Prototyp ist hier online siehe Buttons.
         </p>
       </div>
     </section>
@@ -160,7 +170,7 @@
     function promptForPassword() {
       const password = prompt("Bitte Passwort eingeben:");
       // Hier kannst du dein eigenes Passwort hinterlegen
-      if (password === "MeinGeheimesPasswort") {
+      if (password === "LL_MK$2025") {
         // Wenn das Passwort korrekt ist, öffne die Word-Datei in einem neuen Tab
         window.open("Lebenslauf_2025.docx", "_blank");
       } else if (password !== null) {
