--- a/index.html
+++ b/index.html
@@ -14,13 +14,8 @@
       <nav>
         <ul>
           <li>
-            <a href="Lebenslauf_2025.pdf" target="_blank" class="btn">
-              📄 Lebenslauf als PDF
-            </a>
+            <a href="Lebenslauf_2025.pdf" target="_blank" class="btn">📄 Lebenslauf als PDF</a>
           </li>
-          <!-- Hinweis: Hier könntest du ggf. den .docx-Link entfernen,
-               falls du ihn ausschließlich in der neuen passwortgeschützten
-               Sektion anbieten möchtest. -->
           <li>
             <a href="#projects">Projekte</a>
           </li>
@@ -41,23 +36,47 @@
           Nachdem ich mit über 45 Jahren beruflich als Projektleiter in der Infrastruktur für Verteilnetze tätig bin, habe ich mich entschieden, mich in der Welt der Daten zu vertiefen.
           In meiner aktuellen Tätigkeit kann ich meine Leidenschaft für Daten und Programmierung nur bedingt ausleben wie ich in den letzten Monaten festgestellt habe.
 
-          Die Skills die ich mir bei der Weiterbildung Kurs "Data Scientist NDK HF" aneignen konnte, möchte ich nun in der Praxis anwenden.
+          Die Skills die ich mir beim Weiterbildungskurs "Data Scientist NDK HF" aneignen konnte, möchte ich nun in der Praxis anwenden.
 
-          Seit ich beim Hausbbau 2019 meine erste Excel-Datei Makrodatei für die Erstellung des Elektroinstallationsmaterials erstellt habe, bin ich fasziniert von der Welt der Daten und der Programmierung. 
-          Ich habe mich neben meiner Tätigkit in als Projektleiter im Verteilnetz für die Elektroversorgung seitdem nebenbher auch immer mit Daten beschöftigt.
+          Seit ich beim Hausbau 2019 meine erste Excel-Makrodatei für die Erstellung des Elektroinstallationsmaterials erstellt habe, bin ich fasziniert von der Welt der Daten und der Programmierung.
+          Ich habe mich neben meiner Tätigkeit als Projektleiter im Verteilnetz für die Elektroversorgung seitdem nebenberuflich immer mit Daten beschäftigt.
 
-          Nachdem ich lange Zeit nur mit VBA arbeitete, begann ich 2022 damit mich Power BI und Power Query zu beaschäftigen.
-          Ich habe dort unter anderem eine APP für die Abfrage meiner persönlichen Bankdaten erstellt (via csv Stammdaten).
+          Nachdem ich lange Zeit nur mit VBA arbeitete, begann ich 2022 damit, mich intensiv mit Power BI und Power Query zu beschäftigen.
+          Ich habe dort unter anderem eine App für die Abfrage meiner persönlichen Bankdaten erstellt (via CSV-Stammdaten).
 
-          Im Herbst 2023 entschied ich mich dafür den Lehrgan "Data Scientist NDK HF" zu besuchen.
+          Im Herbst 2023 entschied ich mich dafür, den Lehrgang "Data Scientist NDK HF" zu besuchen.
           Ich lernte dort die faszinierende Welt von SQL und R kennen.
-
         </p>
         <p>
-          In meiner Freizeit beschaeftige ich mich neben Daten mit Sprachen und
+          In meiner Freizeit beschäftige ich mich neben Daten mit Sprachen und
           lerne aktuell Englisch und Französisch. Ich bin auch ein begeisterter
           Shiny-App-Entwickler und arbeite an einer App, die das
-          Sprachenlernen unterstuetzt. Ein Prototyp ist hier online siehe Buttons.
+          Sprachenlernen unterstützt. Ein Prototyp ist hier online (siehe Buttons).
+        </p>
+      </div>
+    </section>
+
+    <!-- Kontakt - direkt NACH "Über mich" -->
+    <section id="contact">
+      <div class="container">
+        <h2>Kontakt</h2>
+        <p><strong>Adresse:</strong></p>
+        <p class="address">
+          St. Niklausstrasse 8a<br>
+          3425 Koppigen, Schweiz
+        </p>
+        <p>
+          <strong>Telefonnummer:</strong> +41 79 765 46 44
+        </p>
+        <p>
+          <strong>Email:</strong>
+          <a href="mailto:matthias.kuhn1979@gmail.com">matthias.kuhn1979@gmail.com</a>
+        </p>
+        <p>
+          <strong>LinkedIn:</strong>
+          <a href="https://www.linkedin.com/in/matthiaskuhn1979/" target="_blank">
+            Besuche mein LinkedIn Profil
+          </a>
         </p>
       </div>
     </section>
@@ -68,12 +87,12 @@
         <h2>Projekte</h2>
         <p>
           Quiz Sprachen lernen: Eine Shiny-App, die das Lernen von
-          Vokabeln und Grammatik in verschiedenen Sprachen unterstuetzt.
+          Vokabeln und Grammatik in verschiedenen Sprachen unterstützt.
         </p>
 
-        <!-- NEU: Link zur English-App -->
+        <!-- Link zur English-App -->
         <p>
-          English App: 
+          <strong>English App:</strong>
           <a href="https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/" 
              target="_blank">
             https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/
@@ -82,7 +101,7 @@
       </div>
     </section>
 
-    <!-- Neu: Links DataScience -->
+    <!-- Links DataScience -->
     <section id="datascience">
       <div class="container">
         <h2>Links DataScience</h2>
@@ -94,7 +113,7 @@
           <li>
             <a href="https://r4ds.had.co.nz/" target="_blank">
               R for Data Science (Hadley Wickham)
-            </a>  
+            </a>
             – Ausführliches Online-Buch zu R, Datenanalyse und Visualisierung.
           </li>
           <li>
@@ -113,7 +132,7 @@
       </div>
     </section>
 
-    <!-- Neu: Sektion Lebenslauf als Word (mit Passwortabfrage) -->
+    <!-- Lebenslauf als Word (Passwortschutz) -->
     <section id="word-cv">
       <div class="container">
         <h2>Lebenslauf als Word</h2>
@@ -128,40 +147,11 @@
       </div>
     </section>
 
-    <!-- Kontakt -->
-    <section id="contact">
-      <div class="container">
-        <h2>Kontakt</h2>
-        <p><strong>Adresse:</strong></p>
-        <p class="address">
-          St. Niklausstrasse 8a<br>
-          3425 Koppigen, Schweiz
-        </p>
-        <p>
-          <strong>Telefonnummer:</strong> +41 79 765 46 44
-        </p>
-        <p>
-          Email:
-          <a href="mailto:matthias.kuhn1979@gmail.com">
-            matthias.kuhn1979@gmail.com
-          </a>
-        </p>
-        <p>
-          <strong>LinkedIn:</strong>
-          <a href="https://www.linkedin.com/in/matthiaskuhn1979/"
-             target="_blank">
-            Besuche mein LinkedIn Profil
-          </a>
-        </p>
-      </div>
-    </section>
   </main>
 
   <footer>
     <div class="container">
-      <p>
-        &copy; 2025 datafreak79.ch | Erstellt mit ❤️ von Matthias Kuhn
-      </p>
+      <p>&copy; 2025 datafreak79.ch | Erstellt mit ❤️ von Matthias Kuhn</p>
     </div>
   </footer>
 
@@ -169,15 +159,12 @@
   <script>
     function promptForPassword() {
       const password = prompt("Bitte Passwort eingeben:");
-      // Hier kannst du dein eigenes Passwort hinterlegen
+      // Hier das Passwort anpassen, wenn gewünscht
       if (password === "LL_MK$2025") {
-        // Wenn das Passwort korrekt ist, öffne die Word-Datei in einem neuen Tab
         window.open("Lebenslauf_2025.docx", "_blank");
       } else if (password !== null) {
-        // Falls Benutzer was eingibt, aber das Falsche
         alert("Falsches Passwort!");
       }
-      // Falls der Benutzer „Abbrechen“ klickt, passiert nichts
     }
   </script>
 </body>
