Link Englishapp umbenennen

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- Link zur English-App -->
         <p>
           <strong>English App:</strong>
-          <a href="https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/" 
+          <a href="English APP Desktop" 
              target="_blank">
             https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/
           </a>
