Umbenenen Englisch APP

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         <!-- Link zur English-App -->
         <p>
           <strong>English App:</strong>
-          <a href="English APP Desktop" 
+          <a href="https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/" 
              target="_blank">
-            https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/
+            English APP Desktop
           </a>
         </p>
       </div>
