--- a/index.html
+++ b/index.html
@@ -33,28 +33,34 @@
       <div class="container">
         <h2>Über mich</h2>
         <p>
-          Nachdem ich mit über 45 Jahren beruflich als Projektleiter in der Infrastruktur für Verteilnetze tätig bin, habe ich mich entschieden, mich in der Welt der Daten zu vertiefen.
-          In meiner aktuellen Tätigkeit kann ich meine Leidenschaft für Daten und Programmierung nur bedingt ausleben wie ich in den letzten Monaten festgestellt habe.
+          Nachdem ich mit über 45 Jahren beruflich als Projektleiter in der Infrastruktur für Verteilnetze tätig bin, habe ich mich entschieden, mich in der Welt der Daten zu vertiefen.<p>
+          <p style="font-size:12pt;">
+            In meiner aktuellen Tätigkeit kann ich meine Leidenschaft für Daten und Programmierung nur bedingt ausleben.
+          </p>
+          <p style="font-size:12pt;">
+            Dies habe ich in den letzten Monaten festgestellt.
+          </p>
 
-          Die Skills die ich mir beim Weiterbildungskurs "Data Scientist NDK HF" aneignen konnte, möchte ich nun in der Praxis anwenden.
+          <div class="cv-buttons" style="display: flex; gap: 8px; align-items: center; margin-bottom: 20px;"></div>
+            <a href="Lebenslauf_2025.pdf" target="_blank" class="btn" style="background: #0078d7; color: #fff; padding: 10px 15px; text-decoration: none; border-radius: 5px;">PDF Lebenslauf</a>
+            <button onclick="promptForPassword()" class="btn" style="background: #0078d7; color: #fff; padding: 10px 15px; border: none; border-radius: 5px; cursor: pointer;">Word Lebenslauf</button>
+          </div>
 
-          Seit ich beim Hausbau 2019 meine erste Excel-Makrodatei für die Erstellung des Elektroinstallationsmaterials erstellt habe, bin ich fasziniert von der Welt der Daten und der Programmierung.
-          Ich habe mich neben meiner Tätigkeit als Projektleiter im Verteilnetz für die Elektroversorgung seitdem nebenberuflich immer mit Daten beschäftigt.
-
-          Nachdem ich lange Zeit nur mit VBA arbeitete, begann ich 2022 damit, mich intensiv mit Power BI und Power Query zu beschäftigen.
-          Ich habe dort unter anderem eine App für die Abfrage meiner persönlichen Bankdaten erstellt (via CSV-Stammdaten).
-
-          Im Herbst 2023 entschied ich mich dafür, den Lehrgang "Data Scientist NDK HF" zu besuchen.
-          Ich lernte dort die faszinierende Welt von SQL und R kennen.
-        </p>
-        <p>
-          In meiner Freizeit beschäftige ich mich neben Daten mit Sprachen und
-          lerne aktuell Englisch und Französisch. Ich bin auch ein begeisterter
-          Shiny-App-Entwickler und arbeite an einer App, die das
-          Sprachenlernen unterstützt. Ein Prototyp ist hier online (siehe Buttons).
-        </p>
-      </div>
-    </section>
+          <p style="font-size: 1.1em; line-height: 1.6;">
+            Die Skills, die ich mir beim Weiterbildungskurs "Data Scientist NDK HF" aneignen konnte, möchte ich nun in der Praxis anwenden.
+          </p>
+          <p style="font-size: 1.1em; line-height: 1.6;">
+            Seit ich beim Hausbau 2019 meine erste Excel-Makrodatei für die Erstellung des Elektroinstallationsmaterials erstellt habe, bin ich fasziniert von der Welt der Daten und der Programmierung. Neben meiner Tätigkeit als Projektleiter im Verteilnetz für die Elektroversorgung beschäftige ich mich seither leidenschaftlich mit Daten.
+          </p>
+          <p style="font-size: 1.1em; line-height: 1.6;">
+            Nachdem ich lange Zeit nur mit VBA arbeitete, begann ich 2022 damit, mich intensiv mit Power BI und Power Query auseinanderzusetzen. Unter anderem entwickelte ich eine App zur Abfrage meiner persönlichen Bankdaten (via CSV-Stammdaten).
+          </p>
+          <p style="font-size: 1.1em; line-height: 1.6;">
+            Im Herbst 2023 entschied ich mich, den Lehrgang "Data Scientist NDK HF" zu besuchen und entdeckte dabei die faszinierende Welt von SQL und R.
+          </p>
+          <p style="font-size: 1.1em; line-height: 1.6;">
+            In meiner Freizeit widme ich mich neben Daten auch Sprachen – aktuell lerne ich Englisch und Französisch – und entwickle begeistert Shiny-Apps. Ein Prototyp zum Sprachenlernen ist bereits online verfügbar (siehe Buttons).
+          </p>
 
     <!-- Kontakt - direkt NACH "Über mich" -->
     <section id="contact">
@@ -75,7 +81,7 @@
         <p>
           <strong>LinkedIn:</strong>
           <a href="https://www.linkedin.com/in/matthiaskuhn1979/" target="_blank">
-            Besuche mein LinkedIn Profil
+            linkedin.com/in/matthiaskuhn1979/
           </a>
         </p>
       </div>
